<resources>
    <string name="app_name">Kazi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_title">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Connection</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="sign_with">Se connecter avec :</string>
    <string name="sign_action">Veullez vous connecter</string>
</resources>