<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp"
    tools:context=".Login">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="#219ebc"
        android:text="Kazi"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"

        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_title"
        android:textSize="34sp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_action"
        android:textColor="#6c757d"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textColor="#219ebc"
        android:textStyle="bold" />


    <Button
        android:id="@+id/actionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#06d6a0"
        android:paddingHorizontal="54dp"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_with"
        android:textAlignment="center"
        android:textColor="#6c757d"
        android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"

            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/google"
                android:padding="10dp"
                android:contentDescription="google icone"
                />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/facebook"
                android:padding="10dp"
                android:contentDescription="facebook icone"

                />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/linkedin"
                android:padding="10dp"/>

        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#6c757d"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="Ou"
                android:textAlignment="center"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Cree un compte"
        android:textAlignment="center"
        android:textColor="#219ebc"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        />


</LinearLayout>